syntax = "proto3";

package api.bg.v1;

import "google/api/annotations.proto";

option go_package = "api/bg/v1;v1";
option java_multiple_files = true;
option java_package = "api.bg.v1";
option java_outer_classname = "ApiBGV1";

service Geo {
  // Sends ip address to geo request
  rpc Location (LocationRequest) returns (LocationReply) {
    option (google.api.http) = {
      get: "/v1/location/{ip}"
    };
  }
}

message LocationRequest {
  string ip = 1;
}

message LocationReply {
  string ip = 1;
  string country = 2;
  string city = 3;
}