syntax = "proto3";

option go_package = "bi/internal/conf;conf";

import "google/protobuf/duration.proto";
import "rabbitmq.proto";

message Bootstrap {
  Server server = 1;
  Store store = 2;
  Geo geo = 3;
  bingo.pkg.rabbitmq.SubscriberConfig subscriber = 4;
  Jaeger jaeger = 5;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Store {
  string driver = 1;
  string host = 2;
  uint32 port = 3;
  string database = 4;
  string username = 5;
  string password = 6;
}

message Geo {  
  string grpc_addr = 1;
  string http_addr = 2;
  enum Protocol {
    GRPC = 0;
    HTTP = 1;
  }
  Protocol protocol = 3;
}

message Jaeger {
  string addr = 1;
}